--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <link rel="stylesheet" href="css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/main.css">
+
   </head>
   <body>
     <div class="container-fluid" id="wrapper">
@@ -19,7 +20,7 @@
           <img src="img/logo.png" alt="logo" class="rounded mx-auto d-block">
         </div>
         <div class="col">
-          <ul class="nav justify-content-end">
+          <ul class="nav justify-content-end" id='top_menu'>
             <li class="nav-item">
               <a class="nav-link active" href="#">Strona główna</a>
             </li>
@@ -32,6 +33,10 @@
           </ul>
         </div>
       </div>
+      <h1 class="display-4" id= "main_subtitle">Piekarnia z tradycją</h1>
+      <div class="center">
+        <div class="down"></div>
+      </div>
       </div>
     <div class="container" id="contact">
       <p>Jelly macaroon fruitcake croissant. Halvah pudding tart carrot cake. Fruitcake candy ice cream chocolate bar gingerbread sugar plum. Lemon drops jelly cotton candy. Cookie gingerbread apple pie sweet roll carrot cake jujubes biscuit powder gummi bears. Jujubes cookie jujubes danish tart brownie gingerbread dragée. Sweet lollipop liquorice muffin jujubes. Sweet roll candy canes carrot cake brownie candy gingerbread sugar plum croissant. Cotton candy cupcake sweet. Sweet roll liquorice pudding cake chocolate sweet roll tart lollipop marzipan. Sweet roll cookie chocolate cake dessert dessert cake. Soufflé chocolate bar jelly-o cake.
@@ -42,6 +47,8 @@ Marzipan jelly chocolate bar carrot cake donut chocolate cake topping. Tootsie r
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="js/jquery-3.2.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+
     <script src="js/bootstrap.min.js"></script>
     <script>
     $("a[href='#contact']").click(function() {
