--- a/index.html
+++ b/index.html
@@ -12,7 +12,29 @@
   </head>
   <body>
     <div class="container-fluid" id="wrapper">
-        <div class="row">
+      <nav class="navbar navbar-expand-lg navbar-inverse">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="navbar-collapse collapse" id="collapsingNavbar">
+        <ul class="navbar-nav">
+            <img src="img/logo.png" alt="logo" class="rounded mx-auto d-block">
+        </ul>
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="" data-target="#myModal" data-toggle="modal">Strona główna</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="" data-target="#myModal" data-toggle="modal">Galeria</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="" data-target="#myModal" data-toggle="modal">Kontakt</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+
+        <!-- <div class="row">
           <div class="col">
 
           </div>
@@ -32,7 +54,7 @@
             </li>
           </ul>
         </div>
-      </div>
+      </div> -->
       <h1 class="display-4" id= "main_subtitle">Piekarnia z tradycją</h1>
       <div class="center">
         <div class="down"></div>
