--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
   </head>
   <body>
-    <div class="container-fluid" id="wrapper">
-      <nav class="navbar navbar-expand-lg navbar-inverse">
+
+      <nav class="navbar navbar-expand-lg navbar-inverse fixed-top">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -33,6 +33,7 @@
         </ul>
     </div>
 </nav>
+<div class="container-fluid" id="wrapper">
 
         <!-- <div class="row">
           <div class="col">
@@ -55,7 +56,9 @@
           </ul>
         </div>
       </div> -->
-      <h1 class="display-4" id= "main_subtitle">Piekarnia z tradycją</h1>
+      <div class="container">
+        <h1 class="display-4" id= "main_subtitle">Piekarnia z tradycją</h1>
+      </div>
       <div class="center">
         <div class="down"></div>
       </div>
